# drming

./: .gitignore  CMakeLists.txt  README.md
android/: CMakeLists.txt  main.cpp  mdnsmanager.cpp  mdnsmanager.h  native.cpp  native.h  networklink.cpp  networklink.h  networkstatus.cpp  networkstatus.h  servicesmodel.cpp  servicesmodel.h  videoframeitem.cpp  videoframeitem.h
android/android/: AndroidManifest.xml
android/android/res/xml/: device_filter.xml
android/android/src/eu/n1coc4cola/drming/: MdnsHelper.java  NetworkHelper.java
android/qml/: LoginDialog.qml  Main.qml  SearchBar.qml  ServiceSelector.qml  ServicesList.qml
desktop/: CMakeLists.txt  avahi_publisher.cpp  avahi_publisher.h  commandparser.cpp  commandparser.h  display.cpp  display.h  displaymanager.cpp  displaymanager.h  displayreader.cpp  displayreader.h  dispsetup.cpp  dispsetup.h  main.cpp  parameters.cpp  parameters.h  server.cpp  server.h  vkmsfb.h
vkms/: CMakeLists.txt  README.md
